controller/config/api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kernexys-system
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
